<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/AddPokemonEquipo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".equipos.AddPokemonEquipoActivity"
    android:background="@drawable/fondopokedexcompleto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boogaloo"
                android:padding="10dp"
                android:text="@string/add_pokemon_equipo"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/texNombrePokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boogaloo"
                android:paddingBottom="2dp"
                android:text="@string/NombrePokemon"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textNombrePokemon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:text="Name"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/NombredelEquipoHint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/texNombreObjeto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boogaloo"
                android:paddingBottom="2dp"
                android:text="@string/NombreObjeto"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textNombreObjeto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/ObjetoPokemon"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/texNombreHabilidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boogaloo"
                android:paddingBottom="2dp"
                android:text="@string/HbilidadPokemonTitulo"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textNombreHabilidad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/HabilidadPokemon"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:inputType="textPersonName"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:id="@+id/texNombreAtaques"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/boogaloo"
                android:paddingBottom="2dp"
                android:text="@string/TextViewAtaques"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textAtaque1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/Ataque1Pokemon"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textAtaque2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/Ataque2Pokemon"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textAtaque3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/Ataque3Pokemon"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/borde_edittext">

            <EditText
                android:id="@+id/textAtaque4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:color="@color/white"
                android:fontFamily="@font/baloo"
                android:hint="@string/Ataque4Pokemon"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/borde_button_azu"
            android:layout_margin="20dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/btnGuardarPokemon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="#00000000"
                android:textColor="@color/white"
                android:fontFamily="@font/baloo"
                android:text="@string/GuardarEquipo"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>